--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,10 @@ plugins {
 }
 
 group = 'com.ddd'
-version = '1.0.0'
 
 jar {
-    archivesBaseName = "isitgone-${rootProject.name}"
-    archiveVersion = "${version}"
+    archivesBaseName = 'app'
+    archiveVersion = ''
     archiveClassifier = ''
 }
 
